fix: let flex-box handle spacing better
[#OCD-3117]

--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -816,7 +816,7 @@ option[label^="Removed"] {
 }
 
 .flex-item {
-    min-width: 150px;
+    //min-width: 150px;
     flex: 1;
     margin-bottom: 5px;
 
@@ -829,32 +829,38 @@ option[label^="Removed"] {
         text-align: center;
     }
 
-    &.main-axis-align-end {
-        margin-left: auto;
-    }
-
     &.cross-axis-align-end {
         align-self: flex-end;
     }
 
     &.wide {
         flex: 2;
-        min-width: 300px;
+        //min-width: 300px;
+    }
+
+    &.wider {
+        flex: 4;
+        //min-width: 300px;
+    }
+
+    &.widest {
+        flex: 8;
+        //min-width: 300px;
     }
 
     &.narrow {
         flex: .5;
-        min-width: 75px;
+        //min-width: 75px;
     }
 
     &.narrower {
         flex: .25;
-        min-width: 37px;
+        //min-width: 37px;
     }
 
     &.narrowest {
         flex: .125;
-        min-width: 18px;
+        //min-width: 18px;
     }
 }
 
